updates to rendering and ZIP download